--- a/glut_auction/pages/login/login.wxml
+++ b/glut_auction/pages/login/login.wxml
@@ -1,41 +1,53 @@
 <block wx:if="{{!hasUser}}">
-<!--登录区域-->
+  <!--登录区域-->
   <view class="login-container">
-  <image src="/image/initialIcon.png" class="contact-filled" mode="widthFix"></image>
-  <button class="btn-login" bindtap="login">一键登录</button>
-  <text class="tip-text">登录后尽享更多权益</text>
-</view>
+    <image src="/image/initialIcon.png" class="contact-filled" mode="widthFix"></image>
+    <button class="btn-login" bindtap="login">一键登录</button>
+    <text class="tip-text">登录后尽享更多权益</text>
+  </view>
 </block>
 <!-- 个人中心区域 -->
 <block wx:else="">
-  <vire bindtap="logout" style="position: fixed;right: 10rpx;top:15rpx;color: white;background-color: red;border-radius: 30px;padding: 10rpx;">注销登录</vire>
-    <!-- 头像昵称区域 -->
+  <!-- 头像昵称区域 -->
   <view class="top-box">
     <image src="{{userInfo.avatarUrl}}" class="avatar"></image>
-    <view class="nickname">{{userInfo.nickName}}</view>
+    <view class="nickname">{{userInfo.nickName}}<image src="/image/logout.png" style="width: 55rpx;height: 55rpx;margin-left: 13rpx;" bindtap="logout"></image>
+    </view>
   </view>
 
-    <!--内容管理区域-->
-    <view class="mainContext">
+  <!--内容管理区域-->
+  <view class="mainContext">
     <view class="userinfo">
       <view class="picture">
         <image class="userinfo-icon" src="/image/fabu.png" bindtap="publisher"></image>
         我发布的
       </view>
-      <view class="picture" bindtap="myAuction"> 
+      <view class="picture" bindtap="myAuction">
         <image class="userinfo-icon" src="/image/daojishi.png"></image>
         我参与的
-        </view>
+      </view>
       <view class="picture" bindtap="myDeal">
         <image class="userinfo-icon" src="/image/order.png"></image>
         交易记录
-        </view>
+      </view>
       <view class="picture" bindtap="toAddress">
         <image class="userinfo-icon" src="/image/personinfo.png"></image>
         我的信息
-        </view>
+      </view>
+    </view>
+    <!--动态相关-->
+    <view class="article">
+      <view bindtap="myarticle">
+        <image class="img" src="/image/friend-circle.png"></image>
+        <text>我的动态</text>
+        <image src="/image/right-arrow.png"></image>
+      </view>
+      <!--问题反馈-->
+      <view bindtap="feedback">
+        <image class="img" src="/image/feedback.png"></image>
+        <text>问题反馈</text>
+        <image src="/image/right-arrow.png"></image>
+      </view>
     </view>
   </view>
 </block>
-
-
