--- a/glut_auction/pages/login/login.wxss
+++ b/glut_auction/pages/login/login.wxss
@@ -18,7 +18,7 @@ page {
   margin-bottom: 16rpx;
   background-color: rgba(100, 107, 112, 0.548);
   border-radius: 50%;
-  
+
 }
 
 /* 登录按钮的样式 */
@@ -39,7 +39,6 @@ page {
 /* 用户信息样式 */
 .top-box {
   height: 400rpx;
-  background-color: #b2cf9a;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,39 +52,71 @@ page {
   width: 90px;
   height: 90px;
   border-radius: 45px;
-  border: 2px solid white;
+  border: 1px solid white;
   box-shadow: 0 1px 5px black;
 }
 
 /* 用户昵称样式 */
 .top-box .nickname {
-  color: white;
+  color: rgb(14, 10, 10);
   font-weight: bold;
-  font-size: 16px;
+  font-size: 20px;
   margin-top: 10px;
-
+  display: flex;
+  justify-content: center;
 }
-.mainContext{
+
+.mainContext {
   width: 100%;
   height: 70%;
-  background-color: rgb(220, 230, 210);
+  background-color: rgb(243, 245, 240);
 }
 
-.userinfo{
+.userinfo {
   height: 30%;
   width: 100%;
   display: flex;
 }
-.picture{
-  width:160rpx;
-  height:160rpx;
+
+.picture {
+  width: 160rpx;
+  height: 160rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 10px;
 
 }
-.userinfo-icon{
+
+.userinfo-icon {
   width: 150rpx;
   height: 150rpx;
 }
+.article {
+  height: 40%;
+  width: 100%;
+}
+.article view {
+  height: 100rpx;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10rpx;
+}
+
+.article view .img {
+  margin-left: 20rpx;
+  width: 50rpx;
+  height: 50rpx;
+}
+.article view text {
+  margin-right: 26rpx;
+}
+.article view image{
+  width: 50rpx;
+  height: 50rpx;
+  margin-left: 55%;
+}
+
